# redscience

./: .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  GOVERNANCE.md  README.rst  const.py  gitignore  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  dependabot.yml
docs/source/: api.rst  architecture.rst  babelwrap.rst  category.rst  codecompare.rst  colabgit.rst  commandline.rst  conf.py  const.rst  curriculum.rst  debug.rst  devenvironment.rst  game.rst  gamefactory.rst  index.rst  languages.rst  modules.rst  ontology.rst  play.rst  player.rst  playerfactory.rst  playground.rst  releases.rst  tournament.rst  usecases.rst
docs/source/releases/: commandline.rst  corp.rst  educated  educated.rst  games.rst  generalintelligence.rst  governance.rst  gui.rst  introspection.rst  recorded.rst  releases.rst  remote.rst  secure.rst  stats.rst  teachable.rst  team.rst  tournaments.rst
src/redscience/: babelwrap.py  category.py  const.py
