[tool.black]
line-length = 88  
target-version = ['py37'] 
include = '\.pyi?$'
exclude = '''  
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "redscience"
version = "0.1.0"
description = "Create and compare designs for 'olympics' and player tools (a.k.a. 'teams' of 'bots')"
authors = ["Chris Santos-Lang <langchri@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/ChrisSantosLang/redscience"
documentation = "https://chrissantoslang-redscience.readthedocs.io/en/latest/index.html"
keywords = ["game theory", "social simulation", "artificial intelligence", "sociology", "education"]
classifiers = [
  Development Status :: 2 - Pre-Alpha
  Framework :: IPython
  Intended Audience :: Education
  Intended Audience :: Science/Research
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python :: 3
  Topic :: Games/Entertainment :: Simulation
  Topic :: Games/Entertainment :: Turn Based Strategy
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Sociology
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
portion = "^2.1.6"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
black = "^21.8b0"
mypy = "^0.910"
isort = "^5.9.3"
radon = "^5.1.0"
big-O = "^0.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[isort]
default_section = "THIRDPARTY"
known_first_party = "redscience"
known_third_party = "babel,matplotlib,numpy"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
