[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "redscience"
version = "0.1.0"
description = "Create and compare designs for 'olympics' and player tools (a.k.a. 'teams' of 'bots')"
authors = ["Chris Santos-Lang <langchri@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/ChrisSantosLang/redscience"
documentation = "https://chrissantoslang-redscience.readthedocs.io/en/latest/index.html"
keywords = ["game theory", "social simulation", "artificial intelligence", "sociology", "education"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: IPython",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Games/Entertainment :: Simulation",
  "Topic :: Games/Entertainment :: Turn Based Strategy",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Sociology",
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.21.3"
matplotlib = "^3.4.3"
portion = "^2.2.0"
toml = "^0.10.2"
sphinx = {version = "^4", optional = true}
pre-commit = {version = "^2.15.0", optional = true}
black = {version = "^21.9b0", optional = true}
mypy = {version = "^0.910", optional = true}
isort = {version = "^5.9.3", optional = true}
radon = {version = "^5.1.0", optional = true}
big-O = {version = "^0.10.1", optional = true} 

[tool.poetry.extras]
docs = ["sphinx"]
dev = ["pre-commit", "black", "mypy", "isort", "radon", "big-O"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
