[metadata]
name = redscience
version = 1.0.0
license = Apache
description = Create and compare designs for "olympics" and player tools (a.k.a. "teams" of "bots")
long_description = file: README.rst
author = Chris Santos-Lang
author_email = langchri@gmail.com
classifiers=
   Development Status :: 2 - Pre-Alpha
   Framework :: IPython
   Intended Audience :: Education
   Intended Audience :: Science/Research 
   License :: OSI Approved :: Apache Software License 
   Programming Language :: Python :: 3 
   Topic :: Games/Entertainment :: Simulation
   Topic :: Games/Entertainment :: Turn Based Strategy 
   Topic :: Scientific/Engineering :: Artificial Intelligence 
   Topic :: Sociology 

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    requests
    importlib; python_version == "3.7.11"

[options.packages.find]
where=src
